--- a/14. Сеть. Асинхорнный код/index.html
+++ b/14. Сеть. Асинхорнный код/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <button id="stopIntervalBtn">ОСТАНОВИСЬ</button>
+    <!-- <button id="stopIntervalBtn">ОСТАНОВИСЬ</button> -->
+    <!-- <h1 id="timeText"></h1> -->
+    <!-- <div id="div1"></div> -->
+    <!-- <ul id="list"></ul> -->
+
+    <div class="current-weather-container">
+        <div>
+            <p id="city">Minsk</p>
+            <p id="time">23:48</p>
+        </div>
+        <div class="current-weather-name">
+            <img id="weatherIcon" width="50px" src="https://openweathermap.org/img/wn/10d@2x.png" alt="">
+            <p id="weatherName">Snow</p>
+            <p id="weatherTemp">-1 °C</p>
+        </div>
+        <div class="current-wind-speed">
+            <p>Speed</p>
+            <p id="windSpeed">3.7 m/s</p>
+        </div>
+    </div>
+    <div id="futureWeatherContainer" class="future-weather-container">
+    
+    </div>
+
+    <template id="futureWeatherTemplate">
+        <div id="futureWeather" class="future-weather">
+            <div>
+                <p id="futureDate">2021-12-04</p>
+                <p id="futureTime">21:00:00</p>
+            </div>
+            <img width="40px" id="futureWeatherIcon" src="" alt="">
+            <p id="futureWeatherTemp">-1 °C</p>
+        </div>
+    </template>
 </body>
 </html>
