--- a/14. Сеть. Асинхорнный код/index.html
+++ b/14. Сеть. Асинхорнный код/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./script.js" defer></script>
 </head>
 <body>
@@ -13,23 +15,47 @@
     <!-- <div id="div1"></div> -->
     <!-- <ul id="list"></ul> -->
 
-    <div class="current-weather-container">
-        <div>
-            <p id="city">Minsk</p>
-            <p id="time">23:48</p>
+    <div class="container-sm pt-3">
+        <form>
+            <div class="input-group mb-3">
+                <input id="cityNameInput" type="text" class="form-control" placeholder="City name" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button id="searchCityBtn" class="btn btn-outline-secondary" type="button">Search</button>
+            </div>
+        </form>
+        <div class="current-weather-container placeholder-glow">
+            <div>
+                <p id="city"><span class="placeholder col-4"></span></p>
+                <p id="time"><span class="placeholder col-2"></p>
+            </div>
+            <div class="current-weather-name">
+                <img id="weatherIcon" width="50px" src="https://i.pinimg.com/originals/e2/63/00/e26300c0c746d3163a0f48223c897cee.gif" alt="">
+                <p id="weatherName"><span class="placeholder col-12"></span></p>
+                <p id="weatherTemp" class="weatherTemp"><span class="placeholder col-10"></p>
+            </div>
+            <div class="current-wind-speed">
+                <p>Speed</p>
+                <p class="windSpeed" id="windSpeed"><span class="placeholder col-10"></p>
+            </div>
         </div>
-        <div class="current-weather-name">
-            <img id="weatherIcon" width="50px" src="https://openweathermap.org/img/wn/10d@2x.png" alt="">
-            <p id="weatherName">Snow</p>
-            <p id="weatherTemp">-1 °C</p>
-        </div>
-        <div class="current-wind-speed">
-            <p>Speed</p>
-            <p id="windSpeed">3.7 m/s</p>
+        <div id="futureWeatherContainer" class="future-weather-container">
+        
         </div>
     </div>
-    <div id="futureWeatherContainer" class="future-weather-container">
-    
+
+    <div id="spinnerOverlay" class="spinner-overlay hidden">
+        <div class="spinner-border text-light" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+        <div id="toast" class="toast align-items-center text-bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+            <div id="toastBody" class="toastText toast-body">
+                Error when fetching weather!
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
     </div>
 
     <template id="futureWeatherTemplate">
